<resources>
    <string name="app_name">H_SaveMe</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_information">Information</string>
    <string name="title_setting">Setting</string>
    <string name="based_on_device">By Device</string>
    <string name="based_on_test">By Test</string>
    <string name="based_on_department">By Specialty</string>
    <string name="based_on_doctor">By Doctor</string>
    <string name="based_on_clink">By Clink</string>
    <string name="based_on_location">By Location</string>
    <string name="choose_search_type">Chose Search Type</string>
    <string name="choose_order_type">Chose Order Type</string>
    <string name="by_alphabet">By Alphabet</string>
    <string name="by_town">By Town</string>
    <string name="about_app">About app</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Devices">Devices</string>
    <string name="Doctors">Doctors</string>
    <string name="Appointments">Appointments</string>
    <string name="Specialties">Specialties</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="search_here">Search here</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="contact_us_at_facebook">Contact us @ Facebook</string>
    <string name="version">Version 1.0</string>
    <string name="search">Search</string>
    <string name="directory">Directory</string>
    <string name="tests">Tests</string>
</resources>