<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="750dp"
        android:id="@+id/layout">


        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"

            android:src="@drawable/nav_menu_header_bg"
            app:srcCompat="@drawable/nav_menu_header_bg" />

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"

            android:clickable="true"
            app:civ_border_width="3dp"
            app:civ_border_color="#FFFFFFFF"

            android:id="@+id/profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-130dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/man" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:background="#ebca0707"
            android:elevation="4dp"
            android:paddingBottom="20dp">


<!--            <ImageView-->
<!--                android:id="@+id/edit"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_alignParentRight="true"-->
<!--                android:layout_marginLeft="16dp"-->
<!--                android:layout_marginRight="16dp"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:clickable="true"-->

<!--                android:src="@android:drawable/ic_menu_edit" />-->



            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:text="Laxman Marothiya"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="(Adhyaksh)"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/beds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textSize="14sp"
                android:textColor="#fff"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_below="@+id/designation"
                android:text="TextView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/designation"
                android:layout_alignParentEnd="true"

                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/appo_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/Appointments" />
                <TextView
                    android:id="@+id/spec_btn"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Specialties" />
                <TextView
                    android:id="@+id/test_btn"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/tests" />

            </LinearLayout>

            <!--            <TextView-->
<!--                android:id="@+id/location"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/designation"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:text="Surat"-->
<!--                android:textColor="#fff"-->
<!--                android:textSize="16sp" />-->
        </RelativeLayout>

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tabs"
            android:layout_below="@+id/profile_layout"
            android:background="#ebca0707"
            android:elevation="4dp"
            />
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_below="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="480dp"
      />

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>